Fix compatibility issues with Java 9/10.